TODO: page layout bug

--- a/website/src/component/Header/HeaderNav/HeaderNav.css
+++ b/website/src/component/Header/HeaderNav/HeaderNav.css
@@ -1,80 +1,78 @@
 .NavLogo {
-    font-size: 200%;
-    font-family: "Dancing Script", cursive;
+  font-size: 200%;
+  font-family: "Dancing Script", cursive;
 }
 
 #Bar {
-    height: 80px;
-    width: 100vw;
+  height: 80px;
+  width: 100vw;
 }
 
 .navbar a {
-    display: inline-block;
-    float: right;
-    list-style: none;
-    margin-top: -2px;
-    text-align: right;
-    transition: transform 0.5s ease-out;
-    -webkit-transition: transform 0.5s ease-out;
+  display: inline-block;
+  list-style: none;
+  margin-top: -2px;
+  text-align: right;
+  transition: transform 0.5s ease-out;
+  -webkit-transition: transform 0.5s ease-out;
 }
-
 
 .navbar li {
-    display: inline-block;
+  display: inline-block;
 }
 
 .navbar a {
-    color: #484848;
-    display: block;
-    font-size: 1em;
-    font-weight: bold;
-    height: 40px;
-    letter-spacing: 0.4px;
-    margin: 0 12px -15px;
-    padding: 0 0.2px;
-    position: relative;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: all 0.5s ease;
-    -webkit-transition: all 0.5s ease;
+  color: #484848;
+  display: block;
+  font-size: 1em;
+  font-weight: bold;
+  height: 40px;
+  letter-spacing: 0.4px;
+  margin: 0 12px -15px;
+  padding: 0 0.2px;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
 }
 
 .navbar a:hover {
-    color: #484848;
-    transition: all 1s ease;
-    -webkit-transition: all 1s ease;
+  color: #484848;
+  transition: all 1s ease;
+  -webkit-transition: all 1s ease;
 }
 
 /* Animated Bottom Line */
 .navbar a:before,
 .navbar a:after {
-    content: '';
-    position: absolute;
-    width: 0%;
-    height: 2px;
-    bottom: -12px;
-    background: #484848;
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  bottom: -12px;
+  background: #484848;
 }
 
 .navbar a:before {
-    left: 0;
-    transition: 0.5s;
+  left: 0;
+  transition: 0.5s;
 }
 
 .navbar a:after {
-    background: #484848;
-    right: 0;
-    /* transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1); */
+  background: #484848;
+  right: 0;
+  /* transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1); */
 }
 
 .navbar a:hover:before {
-    background: #484848;
-    width: 100%;
-    transition: width 0.5s cubic-bezier((0.22, 0.61, 0.36, 1));
+  background: #484848;
+  width: 100%;
+  transition: width 0.5s cubic-bezier((0.22, 0.61, 0.36, 1));
 }
 
 .navbar a:hover:after {
-    background: transparent;
-    width: 100%;
-    /* transition: 0s; */
+  background: transparent;
+  width: 100%;
+  /* transition: 0s; */
 }
